gateway/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: public_http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: zero_trust_gateway
                use_remote_address: true
                xff_num_trusted_hops: 0
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format: "%START_TIME% %REQ(:METHOD)% %REQ(:PATH)% %RESPONSE_CODE% %RESPONSE_FLAGS% upstream=%UPSTREAM_HOST% transport_failure=%UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
                route_config:
                  name: local_routes
                  virtual_hosts:
                    - name: zero_trust_services
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/users"
                          route:
                            cluster: user_service
                        - match:
                            prefix: "/resources"
                          route:
                            cluster: resource_service
                        - match:
                            prefix: "/admin"
                          route:
                            cluster: admin_service
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: "route not found\n"
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      status_on_error:
                        code: ServiceUnavailable
                      http_service:
                        server_uri:
                          uri: http://authz:8090
                          cluster: authz_service
                          timeout: 2s
                        path_prefix: /envoy/authz
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: authorization
                                ignore_case: true
                              - exact: dpop
                                ignore_case: true
                              - exact: host
                                ignore_case: true
                              - exact: x-forwarded-host
                                ignore_case: true
                              - exact: x-forwarded-proto
                                ignore_case: true
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-user-id
                                ignore_case: true
                              - exact: x-user-name
                                ignore_case: true
                              - exact: x-user-roles
                                ignore_case: true
                              - exact: x-scopes
                                ignore_case: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: authz_service
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: authz_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authz
                      port_value: 8090

    - name: user_service
      type: STRICT_DNS
      connect_timeout: 2s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: user-service
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/certs/envoy-client.crt
                private_key:
                  filename: /etc/envoy/certs/envoy-client.key
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher:
                    exact: user-service
      load_assignment:
        cluster_name: user_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-service
                      port_value: 8000

    - name: resource_service
      type: STRICT_DNS
      connect_timeout: 2s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: resource-service
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/certs/envoy-client.crt
                private_key:
                  filename: /etc/envoy/certs/envoy-client.key
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher:
                    exact: resource-service
      load_assignment:
        cluster_name: resource_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: resource-service
                      port_value: 8000

    - name: admin_service
      type: STRICT_DNS
      connect_timeout: 2s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: admin-service
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/certs/envoy-client.crt
                private_key:
                  filename: /etc/envoy/certs/envoy-client.key
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher:
                    exact: admin-service
      load_assignment:
        cluster_name: admin_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: admin-service
                      port_value: 8000
